<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.explore.exploreFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_kindsOfBees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:text="@string/kindsOfBees"
            android:textColor="#FF000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_kindsOfFloral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/kindsOfFloral"
            android:textColor="#FF000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline_half" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="405dp"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="405dp"
            app:layout_constraintGuide_percent="0.6" />

        <Button
            android:id="@+id/button_explore_search_bee"
            android:layout_width="80dp"
            android:layout_height="41dp"
            android:text="@string/button_search"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout_1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline_spinner"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout_1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="290dp"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/textview_border"
            app:layout_constraintBottom_toTopOf="@+id/guideline_half"
            app:layout_constraintEnd_toStartOf="@+id/guideline_spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView_kindsOfBees"
            app:layout_constraintVertical_bias="0.0">

            <Spinner
                android:id="@+id/spinner_kindsOfBees"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="4dp"
                android:entries="@array/kindsOfBess"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/textview_border"
            app:layout_constraintEnd_toStartOf="@+id/guideline_spinner"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView_kindsOfFloral">

            <Spinner
                android:id="@+id/spinner_kindsOfFloral"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/kindsOfFloral"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_explore_search_floral"
            android:layout_width="80dp"
            android:layout_height="41dp"
            android:text="@string/button_search"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout_2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline_spinner"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>